# Chees-Board

./: Read.md  chess_board.ipynb  pyproject.toml
