[tool.poetry]
name = "chess-board"
version = "0.1.0"
description = ""
authors = ["Momayaz <momayaz.dr.1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.4"
matplotlib = "^3.3.3"
jupyterlab = "^2.2.9"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
